error on line 27 in chapter 01

--- a/main.tex
+++ b/main.tex
@@ -51,7 +51,9 @@
         \vspace{0.5cm}
         \LARGE
         Stručné výpisky
-            
+        \\
+
+        Přepsané slidy p. prof. RNDr. Aleš Pultra, DrSc. ze zimního semestru 2020/2021
         \vspace{1.5cm}
             
         \textbf{Viktor Soukup, Lukáš Salak}
@@ -59,7 +61,8 @@
         \vfill
         \flushright
         \normalsize
-        Bez revize, první verze \\
+        Revize : Mgr. Karel Král,\\
+        druhá verze \\
         Leden 2021
         
     \end{center}
