Fixed O_Ranged's error

--- a/main.tex
+++ b/main.tex
@@ -53,7 +53,12 @@
         Stručné výpisky
         \\
 
-        Přepsané slidy p. prof. RNDr. Aleš Pultra, DrSc. ze zimního semestru 2020/2021
+        z materiálů prof. Pultra
+
+        \vspace{5mm}
+        
+        Zimní semestr 2020/2021
+        
         \vspace{1.5cm}
             
         \textbf{Viktor Soukup, Lukáš Salak}
