--- a/main.tex
+++ b/main.tex
@@ -68,7 +68,7 @@
         \normalsize
         Revize : Mgr. Karel Král,\\
         druhá verze \\
-        Leden 2021
+        \today
         
     \end{center}
 \end{titlepage}
