fixed small mistakes (lebesgue's integral needs to be fixed)

--- a/main.tex
+++ b/main.tex
@@ -67,7 +67,7 @@
         \flushright
         \normalsize
         Revize : Mgr. Karel Král,\\
-        druhá verze \\
+        3. verze \\
         \today
         
     \end{center}
