Fixed inconsistent versioning

--- a/main.tex
+++ b/main.tex
@@ -67,7 +67,7 @@
         \flushright
         \normalsize
         Revize : Mgr. Karel Král,\\
-        3. verze \\
+        Verze 2.1\\
         \today
         
     \end{center}
