force footnotes to the bottom

--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,10 @@
 \usepackage{amsmath}
 \usepackage{mathtools}
 \usepackage{mleftright}
+
+% forcing footnotes to be at the very bottom
+\usepackage[bottom]{footmisc}
+
 \usepackage{hyperref}
 \usepackage{titlesec}
 %This has to be the last
