Added contributor to main page

--- a/main.tex
+++ b/main.tex
@@ -65,7 +65,7 @@
         
         \vspace{1.5cm}
             
-        \textbf{Viktor Soukup, Lukáš Salak}
+        \textbf{Viktor Soukup, Lukáš Salak, Tomáš Sláma}
         
         \vfill
         \flushright
