Convex set definition (with images; for Lagrange)

--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,7 @@
 \usepackage{amsmath}
 \usepackage{mathtools}
 \usepackage{mleftright}
+\usepackage{subfig}
 
 % forcing footnotes to be at the very bottom
 \usepackage[bottom]{footmisc}
