Minor changes in the title page

--- a/main.tex
+++ b/main.tex
@@ -75,14 +75,11 @@
         \Huge
         \textbf{Matematická analýza II}
             
-        \vspace{0.5cm}
-        \LARGE
-        Stručné výpisky
-        \\
+        \vspace{2cm}
+        \Large
+        Poznámky z materiálů prof. Pultra
 
-        z materiálů prof. Pultra
-
-        \vspace{5mm}
+        \vspace{3mm}
         
         Zimní semestr 2020/2021
         
@@ -93,8 +90,6 @@
         \vfill
         \flushright
         \normalsize
-        Revize : Mgr. Karel Král,\\
-        Verze 3.0\\
         \today
         
     \end{center}
