Left header side contains section name
Should be better for orientation within the document.

--- a/main.tex
+++ b/main.tex
@@ -61,6 +61,7 @@
 
 \pagestyle{fancy}
 \fancyhf{}
+\lhead{\leftmark}
 %\lhead{Viktor Soukup, Lukáš Salak}
 \rhead{Matematická analýza II}
 \fancyfoot{}
